  * doc/runscripts: add pppd run script (with chpst) next to the ppp one.

runit 0.12.0
Wed, 29 Oct 2003 18:27:48 +0000
  * runsv.c: don't use EOVERFLOW as it is not standard (thx Christoph
    Scheurer).
  * reboot_system.h1, reboot_system.h2, tryreboot.c: new; test if reboot()
    function takes one or two arguments (solaris).
  * runit.c: fallthrough stage 3: re-get stderr; sync() before reboot().
  * uw_tmp.h1, uw_tmp.h2, tryuwtmp.c, tryuwtmpx.c: new; test for utmpx or
    utmp support.
  * utmpset.c: support systems with utmp or utmpx (solaris).
  * Makefile: adapt.
  * supports the solaris platform (thx Uffe Jakobsen).
  * doc/benefits.html, doc/index.html, doc/replaceinit.html,
    doc/runlevels.html, doc/useinit.html: default service directory is
    /var/service; minor.
  * etc/2, etc/debian/3, etc/freebsd/3, etc/macosx/StartupItems/runit,
    etc/openbsd/3, man/runsv.8, man/runsvchdir.8, man/runsvdir.8: default
    service directory is /var/service.
  * doc/runscripts.html: add more contributed run scripts (thx Tomasz
    Nidecki).

runit 0.11.2
Tue, 23 Sep 2003 10:15:32 +0200
  * doc/useinit.html, etc/macosx/StartupItems/runit: don't use /etc/runit/2
    when using runit service supervision with traditional init, use
    /sbin/runsvdir-start instead.
  * fmt_ptime.c: calculate UTC localtime correctly.
  * runsv.c: support ./supervise as symbolic link, on dangling symlink create
    link target.

runit 0.11.1
Thu,  4 Sep 2003 11:51:02 +0200
  * src/Makefile: add dependency to sysdeps to target fmt_ptime.o (thx Thomas
    Schwinge).
  * svlogd.c: barf if all log directories given at the command line fail.
  * man/svlogd.8: adapt.
  * doc/runscripts.html: adaptions (thx Erich Schubert, Lang Martin).

runit 0.11.0
Fri, 08 Aug 2003 12:37:14 +0200
  * uidgid.c, uidgid.h: new; get uid/gid by name.
  * chpst: new; run program with a changed process state (includes envdir,
    envuidgid, pgrphack, setlock, setuidgid, softlimit functionality).