@@ -4,7 +4,7 @@ exec 2>&1
 PATH=/command:/sbin:/bin:/usr/sbin:/usr/bin
 
 LAST=0
-test -r /etc/runit/reboot && LAST=6
+test -x /etc/runit/reboot && LAST=6
 
 echo 'Waiting for getties to stop...'
 svwaitdown -xk -t14 /var/service/getty-*
