@@ -465,34 +465,45 @@ int main(int argc, char **argv) {
       if (child == svd[0].pid) {
 	svd[0].pid =0;
 	pidchanged =1;
+	svd[0].state =S_DOWN;
+	svd[0].ctrl &=~C_TERM;
+	taia_now(&svd[0].start);
 	if (svd[0].state != S_FINISH)
 	  if ((fd =open_read("finish")) != -1) {
 	    close(fd);
 	    svd[0].state =S_FINISH;
-	    startservice(&svd[0]);
+	    //	    startservice(&svd[0]);
+	    //	    svd[0].want =W_UP;
 	    update_status(&svd[0]);
 	    break;
 	  }
+	/*
 	svd[0].state =S_DOWN;
 	svd[0].ctrl &=~C_TERM;
 	taia_now(&svd[0].start);
+	*/
 	update_status(&svd[0]);
+	/*
 	if (svd[0].want == W_UP) {
 	  startservice(&svd[0]);
 	  break;
 	}
+	*/
       }
       if (haslog) {
 	if (child == svd[1].pid) {
 	  svd[1].pid =0;
 	  pidchanged =1;
 	  svd[1].state =S_DOWN;
+	  svd[1].ctrl &=~C_TERM;
 	  taia_now(&svd[1].start);
 	  update_status(&svd[1]);
+	  /*
 	  if (svd[1].want == W_UP) {
 	    startservice(&svd[1]);
 	    break;
 	  }
+	  */
 	}
       }
     }
